objects/PMC_DH_EntitlementRules__c.object
<CustomObject>
    <fields>
        <fullName>Error_Log__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Error Log</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PMC_DH_AccountProductName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Product Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMC_DH_ProductFamily__c</fullName>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BLENDS</fullName>
                </value>
                <value>
                    <fullName>MICRONUTRIENTS</fullName>
                </value>
                <value>
                    <fullName>Nitrogen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_DH_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Entitlement Rule</relationshipLabel>
        <relationshipName>Product_Entitlement_Rule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_DH_SoldToAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sold To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Entitlement Rule</relationshipLabel>
        <relationshipName>Product_Entitlement_Rule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_DH_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ENABLED</fullName>
                </value>
                <value>
                    <fullName>RESTRICTED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_DH_isActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMC_DH_isProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isProcessed</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Entitlement Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PMC_DH_SoldToAccount__c</columns>
        <columns>PMC_DH_AccountProductName__c</columns>
        <columns>PMC_DH_Product__c</columns>
        <columns>PMC_DH_Type__c</columns>
        <columns>PMC_DH_isActive__c</columns>
        <columns>PMC_DH_isProcessed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ER-{0000}</displayFormat>
        <label>Entitlement Rule</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Entitlement Rule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>